--- a/css/index_style.css
+++ b/css/index_style.css
@@ -32,7 +32,7 @@ body
 .lightbox-item
 {
     width: 50%;
-    height:50%;
+    height:40vh;
     background-image: url(../images/portfolio-1.jpg);
     background-size: 100% 100%;
 }
